--- a/devops/front/package.json
+++ b/devops/front/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "pinia": "^2.1.6",
+    "sass": "^1.69.3",
+    "sass-loader": "^13.3.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
